# cmake-gallery

./: README.md
Keil-Arm-demo/: CMakeLists.txt
Keil-Arm-demo/mdk/: demoproject.uvoptx  demoproject.uvprojx
Keil-Arm-demo/mdk/Listings/: demoproject.map  startup_armcm0.lst
Keil-Arm-demo/mdk/Objects/: demoproject.axf  demoproject.build_log.htm  demoproject.hex  demoproject.htm  demoproject.lnp  demoproject_Target 1.dep  main.crf  main.d  system_armcm0.crf
Keil-Arm-demo/mdk/RTE/: RTE_Components.h
Keil-Arm-demo/src/: main.c
export-shared&static-lib/: CMakeLists.txt  readme.md
export-shared-lib/: CMakeLists.txt  readme.md
export-shared-lib2/: CMakeLists.txt  readme.md
helloworld/: CMakeLists.txt  readme.md
import-static-lib/: CMakeLists.txt  readme.md
import-static-lib2/: CMakeLists.txt  main.c  readme.md
import-static-lib2/cmake/: Findtestlib.cmake
import-static-lib3/: CMakeLists.txt  main.c  readme.md
multi-level-directory/: CMakeLists.txt  main.c  readme.md
standard-project/: CMakeLists.txt  readme.md
standard-project-2/: CMakeLists.txt  readme.md
standard-project-2/src/: main.c
standard-project-2/utillib/: array.c
standard-project-en-compile-options/: CMakeLists.txt  readme.md
standard-project-en-compile-options-2/: CMakeLists.txt  config.h.in  readme.md
standard-project-en-compile-options-2/lib/: CMakeLists.txt.bak
standard-project-en-compile-options/lib/: testlib.lib
standard-project-en-compile-options/src/: CMakeLists.txt  main.c
standard-project-en-compile-options/utillib/: CMakeLists.txt
standard-project/src/: CMakeLists.txt
standard-project/utillib/include/array/: array.h
